<resources>
    <string name="app_name">Current News</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">HOME</string>
    <string name="category">category</string>
    <string name="headlines">Headlines</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
</resources>
